<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/iniciar_encuesta" />
        <item
            android:id="@+id/nav_all_questions"
            android:icon="@drawable/img_list"
            android:title="@string/preguntas" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/acerca_de" />
        </menu>
    </item>

</menu>
