<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.laboratorio5apps.ui.home.HomeFragment"
        android:label="Inicio"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_add_question"
            app:destination="@id/nav_add_question" />
        <action
            android:id="@+id/action_nav_home_to_nav_question"
            app:destination="@id/nav_question" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_question"
        android:name="com.example.laboratorio5apps.ui.addQuestion.AddQuestionFragment"
        android:label="@string/Agregar_Pregunta"
        tools:layout="@layout/fragment_add_question" >
        <action
            android:id="@+id/action_nav_add_question_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.laboratorio5apps.ui.about.AboutFragment"
        android:label="@string/Acerca"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.laboratorio5apps.ui.results.ResultsFragment"
        android:label="Resultados"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_question"
        android:name="com.example.laboratorio5apps.ui.question.QuestionFragment"
        android:label="@string/Preguntas"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_nav_question_to_nav_results"
            app:destination="@id/nav_results"
            app:popUpTo="@+id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_all_questions"
        android:name="com.example.laboratorio5apps.ui.allQuestions.AllQuestionsFragment"
        android:label="@string/Preguntas"/>
    <fragment
        android:id="@+id/nav_answereds"
        android:name="com.example.laboratorio5apps.ui.answereds.AnsweredsFragment"
        android:label="@string/Respuestas" />
</navigation>