<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="137dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:context="@=(MyName.description)">

        <ScrollView
            android:id="@+id/bio1"
            android:layout_width="match_parent"
            android:layout_height="155dp">

            <TextView
                android:id="@+id/txtinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/info"
                android:textColor="@android:color/background_light" />
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/encuesta_gt"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/bttRegresar2"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:text="@string/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="128dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/encu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>